# notas-musiais

./: .coverage  .gitignore  mkdocs.yml  pyproject.toml
docs/: index.md
docs/stylesheets/: extra.css
notas_musicais/: escalas.py
